Backdrop-filter issue on iOS.

--- a/style.css
+++ b/style.css
@@ -370,13 +370,13 @@ header {
 .blur-effect {
     border-radius: 0.9em;
     background: rgba(87, 87, 87, 0.20);
-    /* backdrop-filter: blur(4px); */
-    /* -webkit-backdrop-filter: blur(4px); */
+    backdrop-filter: blur(4px);
+    -webkit-backdrop-filter: blur(4px);
     pointer-events: none;
-    animation: fadeBlur 3s ease-in-out infinite alternate;
+    /* animation: fadeBlur 3s ease-in-out infinite alternate; */
 }
 
-@keyframes fadeBlur {
+/* @keyframes fadeBlur {
     0% {
         backdrop-filter: blur(2px);
         -webkit-backdrop-filter: blur(2px);
@@ -385,7 +385,7 @@ header {
         backdrop-filter: blur(6px);
         -webkit-backdrop-filter: blur(6px);
     }
-}
+} */
 
     .guide-last {
         top: 0;
